REGRESSION(r94274): FormManagerTest.PreviewForm and FillFormNonEmptyField fail on chromium https://bugs.webkit.org/show_bug.cgi?id=67453

Reviewed by Kent Tamura.

.:

Add symbols for internals.

* Source/autotools/symbols.filter:

Source/WebCore:

Fixed the bug by updating inner text value in setSuggestedValue.

Also added a suggestedValue and setSuggestedValue on window.internals for testing purposes.

Test: fast/forms/suggested-value.html

* WebCore.exp.in:
* testing/Internals.cpp:
(WebCore::Internals::suggestedValue):
(WebCore::Internals::setSuggestedValue):
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit/chromium:

Chromium code incorrectly calls Node::isFocusable without updating layout, and was hitting assertions.
Fix the assertion failure (and a potential crash) by updating layout in WebCore::isFocusable.

* src/WebNode.cpp:
(WebKit::WebNode::isFocusable):

Source/WebKit2:

Add symbols for internals.

* win/WebKit2.def:
* win/WebKit2CFLite.def:

LayoutTests:

Added a regression test to ensure HTMLInputElement updates its inner text value when the suggested value is set.

* fast/forms/suggested-value-expected.txt: Added.
* fast/forms/suggested-value.html: Added.


Canonical link: https://commits.webkit.org/83491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94586 268f45cc-cd09-0410-ab3c-d52691b4dbfc